# Cap-Solvers-Rust

./: .gitignore  API_GUIDELINES_COMPLIANCE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: anticaptcha_example.rs  capmonster_example.rs  capsolver_example.rs  enterprise_and_proxy_example.rs  twocaptcha_example.rs
src/: error.rs  lib.rs  types.rs
src/providers/: anticaptcha.rs  capmonster.rs  capsolver.rs  mod.rs  twocaptcha.rs
